Update contact email in index.html

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ h1, h2 { color: #222; }
 <p>The App does not knowingly collect personal data from children without consent.</p>
 
 <h3>Contact</h3>
-<p>Email: <strong>support@gmail.com</strong></p>
+<p>Email: <strong>houman.heirmand@gmail.com</strong></p>
 
 <hr>
 
@@ -67,7 +67,7 @@ h1, h2 { color: #222; }
 <p>Uygulama, ebeveyn izni olmadan çocuklardan bilerek veri toplamaz.</p>
 
 <h3>İletişim</h3>
-<p>E-posta: <strong>support@gmail.com</strong></p>
+<p>E-posta: <strong>houman.heirmand@gmail.com</strong></p>
 
 </body>
 </html>
