--- a/index.html
+++ b/index.html
@@ -2,72 +2,108 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Privacy Policy</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Privacy Policy – OgrenciAsistanAI</title>
+
 <style>
-body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto;
-  max-width: 900px;
-  margin: auto;
-  padding: 20px;
-  line-height: 1.6;
+body{
+  font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Roboto;
+  background:#05050a;
+  color:#fff;
+  padding:40px;
 }
-h1, h2 { color: #222; }
+.container{max-width:900px;margin:auto}
+h1{
+  background:linear-gradient(90deg,#9b6cff,#4f8cff);
+  -webkit-background-clip:text;
+  -webkit-text-fill-color:transparent;
+}
+h2{color:#9b6cff;margin-top:32px}
+p,li{color:#cfcfe8;line-height:1.7}
+.lang{margin-top:60px;padding-top:40px;border-top:1px solid rgba(255,255,255,.1)}
+a{color:#9b6cff}
 </style>
 </head>
+
 <body>
+<div class="container">
 
-<h1>Privacy Policy / Gizlilik Politikası</h1>
-<p><strong>Last updated:</strong> January 2026</p>
+<h1>Gizlilik Politikası</h1>
 
-<h2>English</h2>
+<p>
+OgrenciAsistanAI, kullanıcı gizliliğine büyük önem verir.
+Bu politika, uygulamanın hangi verileri topladığını ve nasıl kullandığını açıklar.
+</p>
 
-<p>This Privacy Policy explains how our application ("the App") collects, uses, and protects user information.</p>
-
-<h3>Information We Collect</h3>
+<h2>Toplanan Veriler</h2>
 <ul>
-<li>Account-related information (if the user chooses to create an account)</li>
-<li>Usage and diagnostic data</li>
-<li>Device-related technical data</li>
+<li>Cihaz bilgileri (model, işletim sistemi)</li>
+<li>Uygulama kullanım istatistikleri</li>
+<li>Reklam etkileşimleri (Google AdMob)</li>
 </ul>
 
-<p>The App does <strong>not</strong> collect sensitive personal data such as precise location, contacts, photos, or payment information.</p>
+<h2>Yapay Zeka ve Fotoğraflar</h2>
+<p>
+AI ile soru çözme sırasında yüklenen görseller yalnızca çözüm üretmek için kullanılır
+ve kalıcı olarak saklanmaz.
+</p>
 
-<h3>Use of Information</h3>
-<p>Data is used only to provide and improve app functionality and AI-powered educational services.</p>
+<h2>Reklamlar</h2>
+<p>
+Uygulama Google AdMob kullanır.
+<br>
+<a href="https://policies.google.com/privacy" target="_blank">
+Google Gizlilik Politikası
+</a>
+</p>
 
-<h3>Third-Party Services</h3>
-<p>The App may use third-party AI services with minimum required data.</p>
+<h2>İletişim</h2>
+<p>
+E-posta: <strong>houman.heirmand@gmail.com</strong>
+</p>
 
-<h3>Children’s Privacy</h3>
-<p>The App does not knowingly collect personal data from children without consent.</p>
+<p style="color:#888">Son güncelleme: Ocak 2026</p>
 
-<h3>Contact</h3>
-<p>Email: <strong>houman.heirmand@gmail.com</strong></p>
+<!-- ENGLISH -->
+<div class="lang">
 
-<hr>
+<h1>Privacy Policy</h1>
 
-<h2>Türkçe</h2>
+<p>
+OgrenciAsistanAI values user privacy.
+This policy explains what data is collected and how it is used.
+</p>
 
-<p>Bu Gizlilik Politikası, uygulamamızın kullanıcı bilgilerini nasıl topladığını ve koruduğunu açıklar.</p>
-
-<h3>Toplanan Bilgiler</h3>
+<h2>Data We Collect</h2>
 <ul>
-<li>Hesap bilgileri (isteğe bağlı)</li>
-<li>Kullanım ve tanılama verileri</li>
-<li>Cihaz bilgileri</li>
+<li>Device information (model, OS)</li>
+<li>App usage statistics</li>
+<li>Ad interaction data (Google AdMob)</li>
 </ul>
 
-<p>Uygulama; konum, kişiler, fotoğraflar veya ödeme bilgileri gibi hassas verileri <strong>toplamaz</strong>.</p>
+<h2>AI & Photos</h2>
+<p>
+Photos uploaded for AI question solving are used only to generate solutions
+and are not permanently stored.
+</p>
 
-<h3>Bilgilerin Kullanımı</h3>
-<p>Veriler yalnızca uygulama işlevlerini geliştirmek için kullanılır.</p>
+<h2>Advertisements</h2>
+<p>
+This app uses Google AdMob.
+<br>
+<a href="https://policies.google.com/privacy" target="_blank">
+Google Privacy Policy
+</a>
+</p>
 
-<h3>Çocukların Gizliliği</h3>
-<p>Uygulama, ebeveyn izni olmadan çocuklardan bilerek veri toplamaz.</p>
+<h2>Contact</h2>
+<p>
+Email: <strong>houman.heirmand@gmail.com</strong>
+</p>
 
-<h3>İletişim</h3>
-<p>E-posta: <strong>houman.heirmand@gmail.com</strong></p>
+<p style="color:#888">Last updated: January 2026</p>
 
+</div>
+</div>
 </body>
 </html>
